# ragnote

./: .clip_checkpoint.json  .gitignore  AGENTS.md  README.md  api.py  config.example.json  main.py  mcp_server.py  ocr_runner.py  pyproject.toml  requirements-all.txt  requirements.txt  run.py  start_mcp.sh  vtm-mcp.service
commands/: __init__.py  clip.py  process.py  sop.py
core/: __init__.py  checkpoint.py  conditions.py  config.py  graph.py  state.py  utils.py
core/nodes/: __init__.py  book_index.py  chapter_detect.py  chunk_process.py  global_review.py  merge.py  preprocess.py  vlm_analysis.py
core/prompts/: book_index.py  draft.py  framework.py  knowledge.py  review.py
scripts/: pdf_summary.py  sop_extract.py
