[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vtm"
version = "1.0.0"
description = "PDF笔记生成工具 - 支持繁体竖排中文，生成结构化笔记"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pymupdf>=1.24.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
vtm = "vtm.cli:main"

[tool.setuptools.packages.find]
include = ["vtm*"]
